--- a/estilos.css
+++ b/estilos.css
@@ -4,3 +4,11 @@ body
     border: 1px solid transparent;
     text-align: center;
 }
+
+div
+{
+    width: 50%;
+    height: 200px;
+    background-color: chartreuse;
+    border: 1px solid red;
+}
